--- a/dvig.html
+++ b/dvig.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Двигатель</title>
-    <link rel="stylesheet" href="/css/dvig/dviga.css">
+    <link rel="stylesheet" href="css/dvig/dviga.css">
 </head>
 
 <body>
@@ -15,9 +15,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Главная</a></li>
-                    <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                    <li><a href="/about.html">О нас</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="dostavka.html">Доставка и оплата</a></li>
+                    <li><a href="about.html">О нас</a></li>
                     <li>+7 (351) 673-52-42</li>
                 </ul>
             </nav>
@@ -25,7 +25,7 @@
         <section>
             <div class="parallelogram">
                 <div>
-                    <img src="/images/icon.svg" alt="">
+                    <img src="images/icon.svg" alt="">
                     <h1>Auto 174</h1>
                 </div>
                 <div class="poisk">
@@ -33,12 +33,12 @@
                         <input type="text" placeholder="поиск по сайту" required>
                     </form>
                     <form action="">
-                        <a href=""><img src="/images/free-icon-search-5614495 1.png" alt=""></a>
+                        <a href=""><img src="images/free-icon-search-5614495 1.png" alt=""></a>
                     </form>
                 </div>
                 <div class="card">
                     <form action="">
-                        <a href="/korzina.html"><img src="/images/shoppingcart_120371 1.png" alt=""></a>
+                        <a href="korzina.html"><img src="images/shoppingcart_120371 1.png" alt=""></a>
                     </form>
                 </div>
             </div>
@@ -47,88 +47,88 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="/dvig.html">Двигатель</a></li>
-                        <li><a href="/exhaust system.html">Выпускная система</a></li>
-                        <li><a href="/Exhaust.html">Выхлопная система</a></li>
-                        <li><a href="/turbo.html">Турбо раздел</a></li>
-                        <li><a href="/KPP.html">КПП / Коробка передач</a></li>
-                        <li><a href="/steering.html">Рулевое управление</a></li>
-                        <li><a href="/vnehka.html">Внешний вед / обвес</a></li>
-                        <li><a href="/salon.html">Салон</a></li>
-                        <li><a href="/Electronics.html">Электроника</a></li>
-                        <li><a href="/opika.html">Автомобильная оптика</a></li>
+                        <li><a href="dvig.html">Двигатель</a></li>
+                        <li><a href="exhaust system.html">Выпускная система</a></li>
+                        <li><a href="Exhaust.html">Выхлопная система</a></li>
+                        <li><a href="turbo.html">Турбо раздел</a></li>
+                        <li><a href="KPP.html">КПП / Коробка передач</a></li>
+                        <li><a href="steering.html">Рулевое управление</a></li>
+                        <li><a href="vnehka.html">Внешний вед / обвес</a></li>
+                        <li><a href="salon.html">Салон</a></li>
+                        <li><a href="Electronics.html">Электроника</a></li>
+                        <li><a href="opika.html">Автомобильная оптика</a></li>
                     </ul>
                 </nav>
             </aside>
             <div>
                 <section class="setka">
                     <div>
-                        <a href="/images/dvig 1.jpg">
-                            <img src="/images/dvig 1.jpg" alt=""></a>
+                        <a href="images/dvig 1.jpg">
+                            <img src="images/dvig 1.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/dvig 2.jpg ">
-                            <img src="/images/dvig 2.jpg" alt=""></a>
+                        <a href="images/dvig 2.jpg ">
+                            <img src="images/dvig 2.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/d 3.jpg">
-                            <img src="/images/d 3.jpg" alt=""></a>
+                        <a href="images/d 3.jpg">
+                            <img src="images/d 3.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/d4.jpg">
-                            <img src="/images/d4.jpg" alt=""></a>
+                        <a href="images/d4.jpg">
+                            <img src="images/d4.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/d5.jpg">
-                            <img src="/images/d5.jpg" alt=""></a>
+                        <a href="images/d5.jpg">
+                            <img src="images/d5.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/d6.jpg">
-                            <img src="/images/d6.jpg" alt=""></a>
+                        <a href="images/d6.jpg">
+                            <img src="images/d6.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 77.jpg">
-                            <img src="/images/image 77.jpg" alt=""></a>
+                        <a href="images/image 77.jpg">
+                            <img src="images/image 77.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 88.jpg">
-                            <img src="/images/image 88.jpg" alt=""></a>
+                        <a href="images/image 88.jpg">
+                            <img src="images/image 88.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 99.jpg">
-                            <img src="/images/image 99.jpg" alt=""></a>
+                        <a href="images/image 99.jpg">
+                            <img src="images/image 99.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
@@ -138,10 +138,10 @@
         </main>
         <footer>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/ZAKAZ.html">Как сделать заказ</a></li>
-                <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                <li><a href="/about.html">О нас</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="ZAKAZ.html">Как сделать заказ</a></li>
+                <li><a href="dostavka.html">Доставка и оплата</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
             <ul>
