--- a/ZAKAZ.html
+++ b/ZAKAZ.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Как оформить заказ</title>
-    <link rel="stylesheet" href="/css/zakaz/zakaz.css">
+    <link rel="stylesheet" href="css/zakaz/zakaz.css">
 </head>
 
 <body bgcolor="0, 0, 0, 0">
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                <li><a href="/about.html">О нас</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="dostavka.html">Доставка и оплата</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li>+7 (351) 673-52-42</li>
             </ul>
         </nav>
@@ -23,7 +23,7 @@
     <section>
         <div class="parallelogram">
             <div>
-                <img src="/images/icon.svg" alt="">
+                <img src="images/icon.svg" alt="">
                 <h1>Auto 174</h1>
             </div>
             <div class="poisk">
@@ -45,16 +45,16 @@
         <aside>
             <nav>
                 <ul>
-                    <li><a href="/dvig.html">Двигатель</a></li>
-                    <li><a href="/exhaust system.html">Выпускная система</a></li>
-                    <li><a href="/Exhaust.html">Выхлопная система</a></li>
-                    <li><a href="/turbo.html">Турбо раздел</a></li>
-                    <li><a href="/KPP.html">КПП / Коробка передач</a></li>
-                    <li><a href="/steering.html">Рулевое управление</a></li>
-                    <li><a href="/vnehka.html">Внешний вед / обвес</a></li>
-                    <li><a href="/salon.html">Салон</a></li>
-                    <li><a href="/Electronics.html">Электроника</a></li>
-                    <li><a href="/opika.html">Автомобильная оптика</a></li>
+                    <li><a href="dvig.html">Двигатель</a></li>
+                    <li><a href="exhaust system.html">Выпускная система</a></li>
+                    <li><a href="Exhaust.html">Выхлопная система</a></li>
+                    <li><a href="turbo.html">Турбо раздел</a></li>
+                    <li><a href="KPP.html">КПП / Коробка передач</a></li>
+                    <li><a href="steering.html">Рулевое управление</a></li>
+                    <li><a href="vnehka.html">Внешний вед / обвес</a></li>
+                    <li><a href="salon.html">Салон</a></li>
+                    <li><a href="Electronics.html">Электроника</a></li>
+                    <li><a href="opika.html">Автомобильная оптика</a></li>
                 </ul>
             </nav>
         </aside>
@@ -67,7 +67,7 @@
                 Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х
                 годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
                 используется Lorem Ipsum.</p>
-            <img src="/images/f1.jpg" alt="">
+            <img src="images/f1.jpg" alt="">
             <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                 стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник
                 создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem
@@ -75,7 +75,7 @@
                 Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х
                 годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
                 используется Lorem Ipsum.</p>
-            <img src="/images/f2.jpg" alt="">
+            <img src="images/f2.jpg" alt="">
             <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
                 стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник
                 создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem
@@ -83,15 +83,15 @@
                 Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х
                 годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых
                 используется Lorem Ipsum.</p>
-            <img src="/images/f3.jpg" alt="">
+            <img src="images/f3.jpg" alt="">
         </div>
     </main>
     <footer>
         <ul>
-            <li><a href="/index.html">Главная</a></li>
-            <li><a href="/ZAKAZ.html">Как сделать заказ</a></li>
-            <li><a href="/dostavka.html">Доставка и оплата</a></li>
-            <li><a href="/about.html">О нас</a></li>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="ZAKAZ.html">Как сделать заказ</a></li>
+            <li><a href="dostavka.html">Доставка и оплата</a></li>
+            <li><a href="about.html">О нас</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
         <ul>
