--- a/dostavka.html
+++ b/dostavka.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Способы доставки</title>
-    <link rel="stylesheet" href="/css/dostavka/dostavka.css">
+    <link rel="stylesheet" href="css/dostavka/dostavka.css">
 </head>
 
 <body>
@@ -15,9 +15,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Главная</a></li>
-                    <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                    <li><a href="/about.html">О нас</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="dostavka.html">Доставка и оплата</a></li>
+                    <li><a href="about.html">О нас</a></li>
                     <li>+7 (351) 673-52-42</li>
                 </ul>
             </nav>
@@ -25,7 +25,7 @@
         <section>
             <div class="parallelogram">
                 <div>
-                    <img src="/images/icon.svg" alt="">
+                    <img src="images/icon.svg" alt="">
                     <h1>Auto 174</h1>
                 </div>
                 <div class="poisk">
@@ -33,12 +33,12 @@
                         <input type="text" placeholder="поиск по сайту" required>
                     </form>
                     <form action="">
-                        <a href=""><img src="/images/free-icon-search-5614495 1.png" alt=""></a>
+                        <a href=""><img src="images/free-icon-search-5614495 1.png" alt=""></a>
                     </form>
                 </div>
                 <div class="card">
                     <form action="">
-                        <a href="/korzina.html"><img src="/images/shoppingcart_120371 1.png" alt=""></a>
+                        <a href="korzina.html"><img src="images/shoppingcart_120371 1.png" alt=""></a>
                     </form>
                 </div>
             </div>
@@ -47,16 +47,16 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="/dvig.html">Двигатель</a></li>
-                        <li><a href="/exhaust system.html">Выпускная система</a></li>
-                        <li><a href="/Exhaust.html">Выхлопная система</a></li>
-                        <li><a href="/turbo.html">Турбо раздел</a></li>
-                        <li><a href="/KPP.html">КПП / Коробка передач</a></li>
-                        <li><a href="/steering.html">Рулевое управление</a></li>
-                        <li><a href="/vnehka.html">Внешний вед / обвес</a></li>
-                        <li><a href="/salon.html">Салон</a></li>
-                        <li><a href="/Electronics.html">Электроника</a></li>
-                        <li><a href="/opika.html">Автомобильная оптика</a></li>
+                        <li><a href="dvig.html">Двигатель</a></li>
+                        <li><a href="exhaust system.html">Выпускная система</a></li>
+                        <li><a href="Exhaust.html">Выхлопная система</a></li>
+                        <li><a href="turbo.html">Турбо раздел</a></li>
+                        <li><a href="KPP.html">КПП / Коробка передач</a></li>
+                        <li><a href="steering.html">Рулевое управление</a></li>
+                        <li><a href="vnehka.html">Внешний вед / обвес</a></li>
+                        <li><a href="salon.html">Салон</a></li>
+                        <li><a href="Electronics.html">Электроника</a></li>
+                        <li><a href="opika.html">Автомобильная оптика</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -147,10 +147,10 @@
         </main>
         <footer>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/ZAKAZ.html">Как сделать заказ</a></li>
-                <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                <li><a href="/about.html">О нас</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="ZAKAZ.html">Как сделать заказ</a></li>
+                <li><a href="dostavka.html">Доставка и оплата</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
             <ul>
