--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto174</title>
-    <link rel="stylesheet" href="/tut/style.css">
-    <link rel="stylesheet" href="/images/icon.svg">
+    <link rel="stylesheet" href="tut/style.css">
+    <link rel="stylesheet" href="images/icon.svg">
 </head>
 
 <body bgcolor="0, 0, 0, 0">
@@ -24,7 +24,7 @@
     <section>
         <div class="parallelogram">
             <div>
-                <img src="/images/icon.svg" alt="">
+                <img src="images/icon.svg" alt="">
                 <h1>Auto 174</h1>
             </div>
             <div class="poisk">
@@ -32,12 +32,12 @@
                     <input type="text" placeholder="поиск по сайту" required>
                 </form>
                 <form action="">
-                    <a href=""><img src="/images/free-icon-search-5614495 1.png" alt=""></a>
+                    <a href=""><img src="images/free-icon-search-5614495 1.png" alt=""></a>
                 </form>
             </div>
             <div class="card">
                 <form action="">
-                    <a href="/korzina.html"><img src="/images/shoppingcart_120371 1.png" alt=""></a>
+                    <a href="korzina.html"><img src="images/shoppingcart_120371 1.png" alt=""></a>
                 </form>
             </div>
         </div>
@@ -46,93 +46,93 @@
         <aside>
             <nav>
                 <ul>
-                    <li><a href="/dvig.html">Двигатель</a></li>
-                    <li><a href="/exhaust system.html">Выпускная система</a></li>
-                    <li><a href="/Exhaust.html">Выхлопная система</a></li>
-                    <li><a href="/turbo.html">Турбо раздел</a></li>
-                    <li><a href="/KPP.html">КПП / Коробка передач</a></li>
-                    <li><a href="/steering.html">Рулевое управление</a></li>
-                    <li><a href="/vnehka.html">Внешний вед / обвес</a></li>
-                    <li><a href="/salon.html">Салон</a></li>
-                    <li><a href="/Electronics.html">Электроника</a></li>
-                    <li><a href="/opika.html">Автомобильная оптика</a></li>
+                    <li><a href="dvig.html">Двигатель</a></li>
+                    <li><a href="exhaust system.html">Выпускная система</a></li>
+                    <li><a href="Exhaust.html">Выхлопная система</a></li>
+                    <li><a href="turbo.html">Турбо раздел</a></li>
+                    <li><a href="KPP.html">КПП / Коробка передач</a></li>
+                    <li><a href="steering.html">Рулевое управление</a></li>
+                    <li><a href="vnehka.html">Внешний вед / обвес</a></li>
+                    <li><a href="salon.html">Салон</a></li>
+                    <li><a href="Electronics.html">Электроника</a></li>
+                    <li><a href="opika.html">Автомобильная оптика</a></li>
                 </ul>
             </nav>
         </aside>
         <div>
             <section class="image">
-                <img src="/images/1646407295_3-kartinkin-net-p-avtozapchasti-kartinki-4 1.jpg" alt="">
+                <img src="images/1646407295_3-kartinkin-net-p-avtozapchasti-kartinki-4 1.jpg" alt="">
             </section>
             <h1>Топ продаж</h1>
             <section class="setka">
 
                 <div>
-                    <a href="/images/image 1.jpg">
-                        <img src="/images/image 1.jpg" alt=""></a>
+                    <a href="images/image 1.jpg">
+                        <img src="images/image 1.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 2.jpg">
-                        <img src="/images/image 2.jpg" alt=""></a>
+                    <a href="images/image 2.jpg">
+                        <img src="images/image 2.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 3.jpg">
-                        <img src="/images/image 3.jpg" alt=""></a>
+                    <a href="images/image 3.jpg">
+                        <img src="images/image 3.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 4.jpg">
-                        <img src="/images/image 4.jpg" alt=""></a>
+                    <a href="images/image 4.jpg">
+                        <img src="images/image 4.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 5.jpg">
-                        <img src="/images/image 5.jpg" alt=""></a>
+                    <a href="images/image 5.jpg">
+                        <img src="images/image 5.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 6.jpg">
-                        <img src="/images/image 6.jpg" alt=""></a>
+                    <a href="images/image 6.jpg">
+                        <img src="images/image 6.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 7.jpg">
-                        <img src="/images/image 7.jpg" alt=""></a>
+                    <a href="images/image 7.jpg">
+                        <img src="images/image 7.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 8.jpg">
-                        <img src="/images/image 8.jpg" alt=""></a>
+                    <a href="images/image 8.jpg">
+                        <img src="images/image 8.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 9.jpg">
-                        <img src="/images/image 9.jpg" alt=""></a>
+                    <a href="images/image 9.jpg">
+                        <img src="images/image 9.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="whells">
-                    <img src="/images/1646407335_11-kartinkin-net-p-avtozapchasti-kartinki-13 1.png" alt="">
+                    <img src="images/1646407335_11-kartinkin-net-p-avtozapchasti-kartinki-13 1.png" alt="">
                     <div class="stroka">
                         <h2>Заявка на поиск товаров</h2>
                     </div>
@@ -154,40 +154,40 @@
             <section class="setka">
 
                 <div>
-                    <a href="/images/image 10.jpg">
-                        <img src="/images/image 10.jpg" alt=""></a>
+                    <a href="images/image 10.jpg">
+                        <img src="images/image 10.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 11.jpg">
-                        <img src="/images/image 11.jpg" alt=""></a>
+                    <a href="images/image 11.jpg">
+                        <img src="images/image 11.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 12.jpg">
-                        <img src="/images/image 12.jpg" alt=""></a>
+                    <a href="images/image 12.jpg">
+                        <img src="images/image 12.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 13.jpg">
-                        <img src="/images/image 13.jpg" alt=""></a>
+                    <a href="images/image 13.jpg">
+                        <img src="images/image 13.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 14.jpg">
-                        <img src="/images/image 14.jpg" alt=""></a>
+                    <a href="images/image 14.jpg">
+                        <img src="images/image 14.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
@@ -202,24 +202,24 @@
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 16.jpg">
-                        <img src="/images/image 16.jpg" alt=""></a>
+                    <a href="images/image 16.jpg">
+                        <img src="images/image 16.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 17.jpg">
-                        <img src="/images/image 17.jpg" alt=""></a>
+                    <a href="images/image 17.jpg">
+                        <img src="images/image 17.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
                     <h2>1643 р.</h2>
                 </div>
                 <div>
-                    <a href="/images/image 18.jpg">
-                        <img src="/images/image 18.jpg" alt=""></a>
+                    <a href="images/image 18.jpg">
+                        <img src="images/image 18.jpg" alt=""></a>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                         officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                         voluptatum optio sapiente. Alias quasi quam nam.</p>
@@ -230,10 +230,10 @@
     </main>
     <footer>
         <ul>
-            <li><a href="/index.html">Главная</a></li>
-            <li><a href="/ZAKAZ.html">Как сделать заказ</a></li>
-            <li><a href="/dostavka.html">Доставка и оплата</a></li>
-            <li><a href="/about.html">О нас</a></li>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="ZAKAZ.html">Как сделать заказ</a></li>
+            <li><a href="dostavka.html">Доставка и оплата</a></li>
+            <li><a href="about.html">О нас</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
         <ul>
