--- a/opika.html
+++ b/opika.html
@@ -6,17 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автомобильная оптика</title>
-    <link rel="stylesheet" href="/css/optika/Optics.css">
+    <link rel="stylesheet" href="css/optika/Optics.css">
 </head>
 
 <body>
+
     <body bgcolor="0, 0, 0, 0">
         <header>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Главная</a></li>
-                    <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                    <li><a href="/about.html">О нас</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="dostavka.html">Доставка и оплата</a></li>
+                    <li><a href="about.html">О нас</a></li>
                     <li>+7 (351) 673-52-42</li>
                 </ul>
             </nav>
@@ -24,7 +25,7 @@
         <section>
             <div class="parallelogram">
                 <div>
-                    <img src="/images/icon.svg" alt="">
+                    <img src="images/icon.svg" alt="">
                     <h1>Auto 174</h1>
                 </div>
                 <div class="poisk">
@@ -32,12 +33,12 @@
                         <input type="text" placeholder="поиск по сайту" required>
                     </form>
                     <form action="">
-                        <a href=""><img src="/images/free-icon-search-5614495 1.png" alt=""></a>
+                        <a href=""><img src="images/free-icon-search-5614495 1.png" alt=""></a>
                     </form>
                 </div>
                 <div class="card">
                     <form action="">
-                        <a href="/korzina.html"><img src="/images/shoppingcart_120371 1.png" alt=""></a>
+                        <a href="korzina.html"><img src="images/shoppingcart_120371 1.png" alt=""></a>
                     </form>
                 </div>
             </div>
@@ -46,88 +47,88 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="/dvig.html">Двигатель</a></li>
-                        <li><a href="/exhaust system.html">Выпускная система</a></li>
-                        <li><a href="/Exhaust.html">Выхлопная система</a></li>
-                        <li><a href="/turbo.html">Турбо раздел</a></li>
-                        <li><a href="/KPP.html">КПП / Коробка передач</a></li>
-                        <li><a href="/steering.html">Рулевое управление</a></li>
-                        <li><a href="/vnehka.html">Внешний вед / обвес</a></li>
-                        <li><a href="/salon.html">Салон</a></li>
-                        <li><a href="/Electronics.html">Электроника</a></li>
-                        <li><a href="/opika.html">Автомобильная оптика</a></li>
+                        <li><a href="dvig.html">Двигатель</a></li>
+                        <li><a href="exhaust system.html">Выпускная система</a></li>
+                        <li><a href="Exhaust.html">Выхлопная система</a></li>
+                        <li><a href="turbo.html">Турбо раздел</a></li>
+                        <li><a href="KPP.html">КПП / Коробка передач</a></li>
+                        <li><a href="steering.html">Рулевое управление</a></li>
+                        <li><a href="vnehka.html">Внешний вед / обвес</a></li>
+                        <li><a href="salon.html">Салон</a></li>
+                        <li><a href="Electronics.html">Электроника</a></li>
+                        <li><a href="opika.html">Автомобильная оптика</a></li>
                     </ul>
                 </nav>
             </aside>
             <div>
                 <section class="setka">
                     <div>
-                        <a href="/images/image 3.jpg">
-                            <img src="/images/image 3.jpg" alt=""></a>
+                        <a href="images/image 3.jpg">
+                            <img src="images/image 3.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 001.jpg">
-                            <img src="/images/image 001.jpg" alt=""></a>
+                        <a href="images/image 001.jpg">
+                            <img src="images/image 001.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 002.jpg">
-                            <img src="/images/image 002.jpg" alt=""></a>
+                        <a href="images/image 002.jpg">
+                            <img src="images/image 002.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 003.jpg">
-                            <img src="/images/image 003.jpg" alt=""></a>
+                        <a href="images/image 003.jpg">
+                            <img src="images/image 003.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 004.jpg">
-                            <img src="/images/image 004.jpg" alt=""></a>
+                        <a href="images/image 004.jpg">
+                            <img src="images/image 004.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 005.jpg">
-                            <img src="/images/image 005.jpg" alt=""></a>
+                        <a href="images/image 005.jpg">
+                            <img src="images/image 005.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 006.jpg">
-                            <img src="/images/image 006.jpg" alt=""></a>
+                        <a href="images/image 006.jpg">
+                            <img src="images/image 006.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 007.jpg">
-                            <img src="/images/image 007.jpg" alt=""></a>
+                        <a href="images/image 007.jpg">
+                            <img src="images/image 007.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
                         <h2>1643 р.</h2>
                     </div>
                     <div>
-                        <a href="/images/image 008.jpg">
-                            <img src="/images/image 008.jpg" alt=""></a>
+                        <a href="images/image 008.jpg">
+                            <img src="images/image 008.jpg" alt=""></a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam dicta, excepturi, quae
                             officia perspiciatis cum expedita cupiditate ducimus nostrum quisquam fugiat, voluptates
                             voluptatum optio sapiente. Alias quasi quam nam.</p>
@@ -137,10 +138,10 @@
         </main>
         <footer>
             <ul>
-                <li><a href="/index.html">Главная</a></li>
-                <li><a href="/ZAKAZ.html">Как сделать заказ</a></li>
-                <li><a href="/dostavka.html">Доставка и оплата</a></li>
-                <li><a href="/about.html">О нас</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="ZAKAZ.html">Как сделать заказ</a></li>
+                <li><a href="dostavka.html">Доставка и оплата</a></li>
+                <li><a href="about.html">О нас</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
             <ul>
@@ -149,11 +150,11 @@
             </ul>
             <ul>
                 <li><a href="">Доставка осуществляется во все регионы России и СНГ</a></li>
-    
+
                 <li><a href="">Обратный звонок</a></li>
             </ul>
         </footer>
 
-</body>
+    </body>
 
 </html>
